--- a/inventories/templates/inventories/inventory.html
+++ b/inventories/templates/inventories/inventory.html
@@ -17,11 +17,15 @@
     <link rel="stylesheet" type="text/css" href="{% static "inventories/css/inventory.css" %}"/>
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/t/dt/jqc-1.12.0,jszip-2.5.0,pdfmake-0.1.18,dt-1.10.11,b-1.1.2,b-html5-1.1.2,b-print-1.1.2,se-1.1.2/datatables.min.css"/>
+{% endblock %}
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script type="text/javascript" src="{% static "inventories/scripts/inventory.js" %}"></script>
+{% block extrascripts %}
+    <script>
+        var PRODUCT_INV_ITEM_API_URL = APP_DOMAIN + "{{ product_inv_item_api_url }}";
+    </script>
     <script type="text/javascript"
             src="https://cdn.datatables.net/t/dt/jqc-1.12.0,jszip-2.5.0,pdfmake-0.1.18,dt-1.10.11,b-1.1.2,b-html5-1.1.2,b-print-1.1.2,se-1.1.2/datatables.min.js"></script>
+    <script type="text/javascript" src="{% static "inventories/scripts/inventory.js" %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -35,8 +39,18 @@
             <tbody>
             {% for item_array in inventory_items %}
                 <tr>
-                    {% for attribute in item_array %}
-                        <td>{{ attribute }}</td>
+                    {% for item in item_array %}
+                        {% if item.type == "label" %}
+                            <td>
+                                <label name="{{ item.name }}">{{ item.attribute }}</label>
+                            </td>
+                        {% elif item.type == "input" %}
+                            <td>
+                                <input type="number" name="{{ item.name }}" value="{{ item.attribute }}"/>
+                            </td>
+                        {% elif item.type == "hidden" %}
+                            <input type="hidden" name="{{ item.name }}" value="{{ item.attribute }}"/>
+                        {% endif %}
                     {% endfor %}
                 </tr>
             {% endfor %}
