--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -14,11 +14,6 @@
     <div id="content-main">
 
         {% if app_list %}
-            {% if must_show_pending_items %}
-                MUST SHOW
-            {% else %}
-                BBLB
-            {% endif %}
             {% for app in app_list %}
                 <div class="app-{{ app.app_label }} module">
                     <table>
@@ -59,6 +54,9 @@
 {% block sidebar %}
     <div id="content-related">
         <div class="module" id="recent-actions-module">
+
+            {% include "admin/index_pending_content.html" %}
+
             <h2>{% trans 'Recent Actions' %}</h2>
             <h3>{% trans 'My Actions' %}</h3>
             {% load log %}
