Added AJAX confirmations and cancellations.

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -9,7 +9,29 @@
     {% if LANGUAGE_BIDI %}
         <link rel="stylesheet" type="text/css"
               href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}"/>{% endif %}
-    <script type="text/javascript">var APP_DOMAIN = "{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}";</script>
+    <script type="text/javascript">
+        var APP_DOMAIN = "{% if request.is_secure %}https://{% else %}http://{% endif %}{{ request.get_host }}";
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = jQuery.trim(cookies[i]);
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+
+        function csrfSafeMethod(method) {
+            // These HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+    </script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     {% include 'session_security/all.html' %}
     {% block extrahead %}{% endblock %}
